agregando referencia y el video

--- a/Git/index.html
+++ b/Git/index.html
@@ -823,6 +823,11 @@ Hacer un init, agregar archivos</p>
 <li>http://git-scm.com/book</li>
 <li>http://www.blog.sergiorus.com/post/968247237/git-sistema-de-control-de-versiones-distribuido</li>
 <li>http://byte.kde.org/~zrusin/git/</li>
+<li>http://www.slideshare.net/chacon/getting-git</li>
+</ul>
+<h2>Video</h2>
+<ul>
+<li>http://www.slideshare.net/chacon/getting-git</li>
 </ul></section>
             
           </div>
